--- a/src/index.scss
+++ b/src/index.scss
@@ -1,25 +1,21 @@
-*,
-*::after,
-*::before {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-:root {
-  font-family: 'Sofia Sans Condensed', sans-serif;
-  font-weight: 400;
-}
-
-
 body {
-  max-width: 1200px;
-  margin: 0 auto;
+  margin: 0;
+  padding: 20px 40px;
+  font-family: 'Open Sans Condensed', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
 
-@media only screen and (max-width: 768px) {
-  body {
-    margin: 0 .5rem 0 .5rem;
-  }
+a {
+  text-decoration: none;
+  color: black;
+}
+
+* {
+  box-sizing: border-box;
 }
